--- a/homework3.ipynb
+++ b/homework3.ipynb
@@ -41,14 +41,27 @@
    "source": [
     "### (a)  What is a minimal state vector for the particle filter such that the resulting system is Markovian? \n",
     "\n",
-    "In order for the system to be Markovian, the current state should only depend on its previous state(s). The following is a state vector for a car with linear dynamics moving in a linear environment: \n",
+    "In order for the system to be Markovian, the current state should only depend on its previous state(s). Since the car has linear dynamics moving in a linear environment, we can write the dynamics as follows: \n",
+    "<center>\n",
+    "$\n",
+    "    \\begin{equation}\n",
+    "        x_{t} = x_{t-1} + \\dot{x}_t \\Delta t + \\frac{1}{2} \\ddot{x} (\\Delta t)^2\n",
+    "    \\end{equation}\n",
+    "$\n",
+    "</center> \n",
     "\n",
     "<center>\n",
     "$\n",
     "    \\begin{equation}\n",
-    "        \\mathbf{x}_t = \\begin{pmatrix} x' \\\\ \\dot{x}' \\end{pmatrix}\n",
+    "        \\dot{x}_t = \\dot{x}_{t-1} + \\ddot{x} \\Delta t\n",
     "    \\end{equation}\n",
     "$\n",
+    "</center>\n",
+    "The acceleration of the car essentially controls the other state variables (velocity and position). Therefore, the minimum state vector is: \n",
+    "<center>\n",
+    "    \\begin{equation}\n",
+    "        \\mathbf{x}_t = \\begin{bmatrix} x_{t} \\\\ \\dot{x}_{t} \\end{bmatrix}\n",
+    "    \\end{equation}\n",
     "</center>"
    ]
   },
@@ -58,19 +71,21 @@
    "source": [
     "### (b)  For your state vector, design the state transition probability $p(x_t|u_t,x_{t−1})$. *Hint:  This transition function will possess linear matrices $A$ and $B$ and a noise covariance $R$*.\n",
     "\n",
+    "The state transition function has the form $\\mathbf{x}_t = A\\mathbf{x}_{t-1} + B\\mathbf{u}_t + R$ where, \n",
+    "\n",
     "<center>\n",
-    "$\n",
-    "    \\begin{equation}\n",
-    "        \\mathbf{x}_t = \\begin{pmatrix} x' \\\\ \\dot{x}' \\\\ \\ddot{x}' \\end{pmatrix} \n",
-    "        = \\begin{pmatrix} x \\\\ \\dot{x} \\\\ \\ddot{x} \\end{pmatrix} + \\begin{pmatrix} 0 \\\\ x_{t} - x_{t-1} \\\\ \n",
-    "        \\dot{x}_{t} - \\dot{x}_{t-1} \\end{pmatrix} \n",
-    "        = \\begin{pmatrix} x \\\\ \\dot{x} \\\\ \\ddot{x} \\end{pmatrix} + \\begin{pmatrix} 0 \\\\ x_{t} - x_{t-1} \\\\ \n",
-    "        x{t} - x_{t-1} - (x_{t-1} - x_{t-1}) \\end{pmatrix} \n",
-    "        = \\begin{pmatrix} x \\\\ \\dot{x} \\\\ \\ddot{x} \\end{pmatrix} + \\begin{pmatrix} 0 \\\\ x_{t} - x_{t-1} \\\\ \n",
-    "        x{t} -2x_{t-1} + x_{t-1}) \\end{pmatrix}\n",
-    "    \\end{equation}\n",
-    "$\n",
-    "</center>"
+    "    $A \\triangleq \\begin{bmatrix} 1 & \\Delta t \\\\ 0 & 1 \\end{bmatrix}$, <br> <br>\n",
+    "    $B \\triangleq \\begin{bmatrix} \\frac{1}{2} (\\Delta t)^2 \\\\ \\Delta t \\end{bmatrix}$, and <br> <br>\n",
+    "    $\\mathbf{u}_t = \\ddot{x} \\sim \\mathcal{N}(0, \\sigma^2)$\n",
+    "</center>\n",
+    "\n",
+    "Since $\\Delta t = 1$, \n",
+    "<center>\n",
+    "    $A = \\begin{bmatrix} 1 & 1 \\\\ 0 & 1 \\end{bmatrix}$, <br> <br>\n",
+    "    $B = \\begin{bmatrix} \\frac{1}{2} \\\\ 1 \\end{bmatrix}$\n",
+    "</center>\n",
+    "\n",
+    "The noise covariance $R$ is essentially comes from the acceleration term being a Gaussian. To  "
    ]
   }
  ],
@@ -90,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
